CREATE TYPE "auth_provider" AS ENUM (
  'google'
);

CREATE TABLE "users" (
  "email" varchar UNIQUE,
  "sub" varchar UNIQUE,
  "auth" auth_provider NOT NULL,
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY NOT NULL
);

CREATE TABLE "avatars" (
  "user_id" integer NOT NULL,
  "link" varchar NOT NULL,
  "name" varchar,
  "details" varchar,
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY NOT NULL
);

CREATE TABLE "profiles" (
  "user_id" integer NOT NULL,
  "avatar_id" integer,
  "name" varchar DEFAULT 'default',
  "summary" varchar,
  "details" varchar,
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY NOT NULL
);

CREATE TABLE "contacts_kvd" (
  "user_id" integer NOT NULL,
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY NOT NULL,
  "key" varchar NOT NULL,
  "value" varchar NOT NULL,
  "details" varchar,
  "profile_id" integer
);

CREATE TABLE "skills" (
  "user_id" integer NOT NULL,
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY NOT NULL,
  "name" varchar NOT NULL,
  "details" varchar,
  "certificate" varchar,
  "profile_id" integer
);

CREATE TABLE "experiences" (
  "user_id" integer NOT NULL,
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY NOT NULL,
  "from_date" date,
  "to_date" date,
  "duration" varchar,
  "company" varchar NOT NULL,
  "position" varchar,
  "details" varchar,
  "certificate" varchar,
  "reference_letter" varchar,
  "profile_id" integer
);

CREATE TABLE "educations" (
  "user_id" integer NOT NULL,
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY NOT NULL,
  "from_date" date,
  "to_date" date,
  "diplom" varchar,
  "certificate" varchar,
  "details" varchar,
  "university" varchar NOT NULL,
  "education" varchar,
  "profile_id" integer,
  "degree" varchar
);

CREATE TABLE "languages" (
  "user_id" integer NOT NULL,
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY NOT NULL,
  "language" varchar NOT NULL,
  "level" varchar,
  "certificate" varchar,
  "details" varchar,
  "profile_id" integer
);

CREATE TABLE "template" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" integer
);

CREATE TABLE "cv" (
  "id" integer,
  "profile_id" integer,
  "template_id" integer,
  "user_id" integer
);

CREATE UNIQUE INDEX ON "profiles" ("user_id", "name");

CREATE UNIQUE INDEX ON "skills" ("profile_id", "name");

ALTER TABLE "profiles" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id") ON DELETE CASCADE;

ALTER TABLE "template" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id") ON DELETE CASCADE;

ALTER TABLE "cv" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id") ON DELETE CASCADE;

ALTER TABLE "contacts_kvd" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id") ON DELETE CASCADE;

ALTER TABLE "skills" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id") ON DELETE CASCADE;

ALTER TABLE "experiences" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id") ON DELETE CASCADE;

ALTER TABLE "educations" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id") ON DELETE CASCADE;

ALTER TABLE "languages" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id") ON DELETE CASCADE;

ALTER TABLE "avatars" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id") ON DELETE CASCADE;

ALTER TABLE "profiles" ADD FOREIGN KEY ("avatar_id") REFERENCES "avatars" ("id") ON DELETE SET NULL;

ALTER TABLE "cv" ADD FOREIGN KEY ("profile_id") REFERENCES "profiles" ("id") ON DELETE SET NULL;

ALTER TABLE "contacts_kvd" ADD FOREIGN KEY ("profile_id") REFERENCES "profiles" ("id") ON DELETE SET NULL;

ALTER TABLE "skills" ADD FOREIGN KEY ("profile_id") REFERENCES "profiles" ("id") ON DELETE SET NULL;

ALTER TABLE "experiences" ADD FOREIGN KEY ("profile_id") REFERENCES "profiles" ("id") ON DELETE SET NULL;

ALTER TABLE "educations" ADD FOREIGN KEY ("profile_id") REFERENCES "profiles" ("id") ON DELETE SET NULL;

ALTER TABLE "languages" ADD FOREIGN KEY ("profile_id") REFERENCES "profiles" ("id") ON DELETE SET NULL;

ALTER TABLE "cv" ADD FOREIGN KEY ("template_id") REFERENCES "template" ("id") ON DELETE CASCADE;
